# chatbot_cloud

./: .dockerignore  Dockerfile  README.md  pyproject.toml  start.sh
.github/workflows/: 1_ci.yml  2_deploy_staging.yml  2_validation.yml  2_validation_staging.yml  3_deploy_staging.yml  3_validation_production.yml  4_deploy_production.yml  4_validation_production.yml  5_deploy_production.yml  auto-pr.yml  ci.yml  deploy-production.yml  deploy-staging.yml  merge-dev-staging.yml  merge-production.yml  merge-staging-production.yml  merge-staging.yml  validate-staging.yml
app/: main.py
app/frontend/: frontend.py
frontend/: frontend.py  main.py
tests/: test_main.py
tests/ci/: test_ci.py
tests/integration/: test_api_integration.py  test_int.py
